versioned_docs/version-7.2.0/api/interpolate.mdx
---
title: interpolate
---

import * as turf from "turf-next";
import ExampleMap from "@site/src/components/ExampleMap";
import WindowTurfGlobal from "@site/src/components/WindowTurfGlobal";
import BrowserOnly from "@docusaurus/BrowserOnly";

<!-- Expose turf as global var for experimenting in the browser console -->

<BrowserOnly>{() => <WindowTurfGlobal turf={turf} />}</BrowserOnly>

### Description

Takes a set of points and estimates their 'property' values on a grid using the [Inverse Distance Weighting (IDW) method](https://en.wikipedia.org/wiki/Inverse_distance_weighting).

### Parameters

| Name                     | Type                                                                                                                                   | Description                                                                                                                                         |
| ------------------------ | -------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------- |
| points                   | **[FeatureCollection](https://tools.ietf.org/html/rfc7946#section-3.3)\<[Point](https://tools.ietf.org/html/rfc7946#section-3.1.2)\>** | with known value                                                                                                                                    |
| cellSize                 | **[number](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Number)**                                        | the distance across each grid point                                                                                                                 |
| options<i>?</i>          | **[Object](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Object)**                                        | Optional parameters _(default \{\})_                                                                                                                |
| options.gridType<i>?</i> | **[string](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/String)**                                        | defines the output format based on a Grid Type (options: 'square' \| 'point' \| 'hex' \| 'triangle') _(default 'square')_                           |
| options.property<i>?</i> | **[string](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/String)**                                        | the property name in `points` from which z-values will be pulled, zValue fallbacks to 3rd coordinate if no property exists. _(default 'elevation')_ |
| options.units<i>?</i>    | **[string](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/String)**                                        | used in calculating cellSize, can be degrees, radians, miles, or kilometers _(default 'kilometers')_                                                |
| options.weight<i>?</i>   | **[number](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Number)**                                        | exponent regulating the distance-decay weighting _(default 1)_                                                                                      |
| options.bbox<i>?</i>     | **[BBox](https://tools.ietf.org/html/rfc7946#section-5)**                                                                              | Bounding Box Array [west, south, east, north] associated with the FeatureCollection. _(default bbox(points))_                                       |

### Returns

**[FeatureCollection](https://tools.ietf.org/html/rfc7946#section-3.3)\<[Point](https://tools.ietf.org/html/rfc7946#section-3.1.2) \| [Polygon](https://tools.ietf.org/html/rfc7946#section-3.1.6)\>** grid of points or polygons with interpolated 'property'

### Examples

```javascript
var points = turf.randomPoint(30, { bbox: [50, 30, 70, 50] });

// add a random property to each point
turf.featureEach(points, function (point) {
  point.properties.solRad = Math.random() * 50;
});
var options = { gridType: "points", property: "solRad", units: "miles" };
var grid = turf.interpolate(points, 100, options);
```

export function Map0() {
  "use strict";

  // jsdoc example start
  var points = turf.randomPoint(30, { bbox: [50, 30, 70, 50] });

  // add a random property to each point
  turf.featureEach(points, function (point) {
    point.properties.solRad = Math.random() * 50;
  });
  var options = { gridType: "points", property: "solRad", units: "miles" };
  var grid = turf.interpolate(points, 100, options);

  //addToMap
  var addToMap = { grid };
  // jsdoc example end

  return <ExampleMap addToMap={addToMap} />;
}

<BrowserOnly>{() => <Map0 />}</BrowserOnly>

### Installation

```javascript
$ npm install @turf/interpolate

import { interpolate } from "@turf/interpolate";
const result = interpolate(...);
```

```javascript
$ npm install @turf/turf

import * as turf from "@turf/turf";
const result = turf.interpolate(...);
```
